# jtcpp

./: .gitignore  Cargo.toml  README.md  build.rs
jbi_cli/: Cargo.toml
jbi_cli/src/: main.rs
src/: basic_block.rs  class.rs  code_container.rs  fatops.rs  importer.rs  lib.rs  main.rs  method.rs  method_cg.rs
src/cpp_codegen/: method.rs  method_writer.rs  (+1 more)
stdlib/: config.hpp  java_cs_io_cs_FilterOutputStream.cpp  java_cs_io_cs_FilterOutputStream.hpp  java_cs_io_cs_OutputStream.cpp  java_cs_io_cs_OutputStream.hpp  java_cs_io_cs_PrintStream.cpp  java_cs_io_cs_PrintStream.hpp  java_cs_lang_cs_Class.hpp  java_cs_lang_cs_Math.cpp  java_cs_lang_cs_Math.hpp  java_cs_lang_cs_Object.cpp  java_cs_lang_cs_Object.h  java_cs_lang_cs_Object.hpp  java_cs_lang_cs_String.cpp  java_cs_lang_cs_String.hpp  java_cs_lang_cs_System.cpp  java_cs_lang_cs_System.hpp  java_cs_lang_cs_invoke_MethodHandle.hpp  java_cs_lang_cs_invoke_cs_ LambdaMetafactory.hpp  java_cs_lang_cs_invoke_cs_CallSite.cpp  java_cs_lang_cs_invoke_cs_CallSite.hpp  java_cs_lang_cs_invoke_cs_MethodHandle.hpp  java_cs_net_cs_ServerSocket.cpp  java_cs_net_cs_ServerSocket.hpp  java_cs_net_cs_Socket.cpp  java_cs_net_cs_Socket.hpp  java_cs_nio_cs_charset_cs_Charset.hpp  java_cs_nio_cs_charset_cs_StandardCharsets.hpp  java_cs_util_cs_function_cs_Predicate.hpp  java_cs_util_cs_stream_cs_Stream.hpp  makefile  runtime.h  runtime.hpp
test/: BasicArthm.java  CallSiteTester.java  Calls.java  Extends.java  Fields.java  Gravity.java  HTTPServer.java  Identity.java  Interfaces.java  InvokeDynamic.java  Sieve.java  cat.java  makefile
(+13 files in other folders)
