[package]
name = "jtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.10", features = ["derive"] }
criterion = "0.5.1"
include_dir = "0.7.3"
smallvec = "1.10.0"
zip = "0.6.6"
